Fixed menu items not visible on some websites

--- a/Minimize Left/userChrome.css
+++ b/Minimize Left/userChrome.css
@@ -33,7 +33,7 @@ menupopup:not(#BMB_bookmarksPopup) {
     box-shadow: 0px 4px 6px -3px rgba(0,0,0,0.4) !important;
     border-radius: 7px !important;
     border: 1px solid rgba(0,0,0,0.2) !important;
-    overflow: hidden !important;
+    overflow: auto !important;
 }
 menuseparator,
 toolbarseparator {
